# kuroiwa_demos

./: .travis.yml  README.md
PRML/: README.md  chapter01.ipynb  chapter03.ipynb
c++/accumulate/: CMakeLists.txt  coordinates.cpp  coordinates.h  test-accumelate.cpp
c++/boost-mapcar-like/: CMakeLists.txt  test-boost-mapcar-like.cpp
c++/enum/: CMakeLists.txt  test-enum.cpp
c++/pair/: CMakeLists.txt  test-pair.cpp
c++/test-quaternion/: CMakeLists.txt  test-quaternion.cpp
c++/vector/: CMakeLists.txt  need-zero-iinput-after-delete.cpp
c++/vector-append/: CMakeLists.txt  test-vector-append.cpp
c++/vector-equal/: CMakeLists.txt  test-vector-equal.cpp
c++/vector-get/: CMakeLists.txt  test-vector-get.cpp
c++/vector-remove-if/: CMakeLists.txt  test-vector-remove.cpp
c++/vector-return/: CMakeLists.txt  test-vector-return.cpp
c++/vector-sort/: CMakeLists.txt  test-vector-sort.cpp
euslisp/: check-auto-balancer-behavior.l
python/classification/: AutomaticClassifier.py
python/classification/BoVW/: create_train_data.py  test.py
python/classification/CNN/: feature.py  test.sh  train.sh
python/classification/chainer-fine-tune/: AutomaticClassifier.py  MyCNN.py  trainCNN.py  (+1 more)
python/csv/: csv-with-loop.py
python/hrpsys-plot/: README.md  datalogger-plotter-with-pyqtgraph.py  datalogger-trimmer.py  default.yaml
python/rosbag/: README.md  check_force-sensor_noise-intensity.py  hrpsys_contact-states.py  odom-body.py  ref-act_contact-states.py  topic-odom.py
python/std-cerr-hrpsys/: README.md  csv-with-loop.py
tex/: .gitignore
tex/KalmanFilter/: kf.tex
(+19 files in other folders)
